--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -54,7 +54,14 @@
                                 <%= user.adress%>
                             </td>
                             <td>
-                                <button class="btn btn-danger">Delete</button>
+                                <div style="display: flex; gap: 10px;">
+                                    <form action="/delete-user/<%= user.id %>" method="post">
+                                        <button type="submit" class="btn btn-danger">Delete</button>
+                                    </form>
+                                    <form action="/view-user/<%= user.id %>" method="post">
+                                        <button type="submit" class="btn btn-warning">View</button>
+                                    </form>
+                                </div>
                             </td>
                         </tr>
 
