--- a/src/view/home.ejs
+++ b/src/view/home.ejs
@@ -58,7 +58,7 @@
                                     <form action="/delete-user/<%= user.id %>" method="post">
                                         <button type="submit" class="btn btn-danger">Delete</button>
                                     </form>
-                                    <form action="/view-user/<%= user.id %>" method="post">
+                                    <form action="/view-user/<%= user.id %>" method="get">
                                         <button type="submit" class="btn btn-warning">View</button>
                                     </form>
                                 </div>
