--- a/src/view/view-user.ejs
+++ b/src/view/view-user.ejs
@@ -34,7 +34,7 @@
             <div class="mb-3">
                 <label class="form-label">Address:</label>
                 <textarea name="address" class="form-control" id="exampleFormControlTextarea1"
-                    rows="2"><%= user.adress %></textarea>
+                    rows="2"><%= user.address %></textarea>
             </div>
             <div>
                 <button type="submit" class="btn btn-dark">Update User</button>
