--- a/src/views/admin/product/show.ejs
+++ b/src/views/admin/product/show.ejs
@@ -8,6 +8,7 @@
     <meta name="description" content="Hỏi Dân IT - Dự án laptopshop" />
     <meta name="author" content="Hỏi Dân IT" />
     <title>Manage Products - Hỏi Dân IT</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
     <link href="/admin/css/styles.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 </head>
@@ -25,9 +26,33 @@
                                 <li class="breadcrumb-item"><a href="/admin">Dashboard</a></li>
                                 <li class="breadcrumb-item active">Products</li>
                             </ol>
-                            <div>table Product</div>
-                        </div>
+                            <div>
+                                <div style="display: flex; justify-content: space-between; align-items: center;">
+                                    <h5>list Users:
+                                    </h5>
+                                    <div>
+                                        <a href="/admin/create-product" class="btn btn-warning"> Create a new
+                                            product</a>
 
+                                    </div>
+
+                                </div>
+                                <table class="table table-hover table-bordered">
+                                    <thead>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Price</th>
+                                        <th>Factory</th>
+                                        <th>Action</th>
+                                    </thead>
+                                    <tbody>
+
+
+                                    </tbody>
+
+                                </table>
+                            </div>
+                        </div>
                     </main>
                     <footer class="py-4 bg-light mt-auto">
                         <%- include('../layout/footer'); -%>
@@ -37,6 +62,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
             crossorigin="anonymous"></script>
         <script src=" /admin/js/scripts.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"
+            crossorigin="anonymous"></script>
+        <script src="/admin/assets/demo/chart-area-demo.js"></script>
+        <script src="/admin/assets/demo/chart-bar-demo.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+            crossorigin="anonymous"></script>
+        <script src="/admin/js/datatables-simple-demo.js"></script>
 </body>
 
 </html>
