--- a/src/views/admin/user/show.ejs
+++ b/src/views/admin/user/show.ejs
@@ -64,10 +64,10 @@
                                                 </td>
                                                 <td>
                                                     <div style="display: flex; gap: 10px;">
-                                                        <form action="/delete-user/<%= user.id %>" method="post">
+                                                        <form action="/admin/delete-user/<%= user.id %>" method="post">
                                                             <button type="submit" class="btn btn-danger">Delete</button>
                                                         </form>
-                                                        <form action="/view-user/<%= user.id %>" method="get">
+                                                        <form action="/admin/view-user/<%= user.id %>" method="get">
                                                             <button type="submit" class="btn btn-warning">View</button>
                                                         </form>
                                                     </div>
