--- a/src/views/admin/product/show.ejs
+++ b/src/views/admin/product/show.ejs
@@ -46,7 +46,39 @@
                                         <th>Action</th>
                                     </thead>
                                     <tbody>
+                                        <% products.forEach( function (product) { %>
+                                            <tr>
+                                                <td>
+                                                    <li>
+                                                        <%= product.id %>
+                                                    </li>
+                                                </td>
+                                                <td>
+                                                    <li>
+                                                        <%= product.name %>
+                                                    </li>
+                                                </td>
+                                                <td>
+                                                    <%= product.price %>
+                                                </td>
+                                                <td>
+                                                    <%= product.factory %>
+                                                </td>
+                                                <td>
+                                                    <div style="display: flex; gap: 10px;">
+                                                        <form action="/admin/delete-product/<%= product.id %>"
+                                                            method="post">
+                                                            <button type="submit" class="btn btn-danger">Delete</button>
+                                                        </form>
+                                                        <form action="/admin/view-product/<%= product.id %>"
+                                                            method="get">
+                                                            <button type="submit" class="btn btn-warning">View</button>
+                                                        </form>
+                                                    </div>
+                                                </td>
+                                            </tr>
 
+                                            <% }) %>
 
                                     </tbody>
 
